--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 13:49:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Nov 06 2020 16:19:40 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -39,8 +39,8 @@
       <div class="filter-controls">
         <a data-filter="all" href="#" class="filter-button ryu_testimonial_button w-button"><strong>ALL</strong></a>
         <a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a>
-        <a data-filter=".2009" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
-        <a href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
+        <a data-filter=".google" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
+        <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
       </div>
       <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
         <p class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
@@ -809,7 +809,7 @@
                 <a href="https://www.facebook.com/pages/Ryu%20Acupuncture%20Clinic/110015192394728/" target="_blank" class="footer_link-2 footer_icon"></a>
                 <a href="https://johnjbarrett.me/" target="_blank" class="footer_link-2 footer_icon"></a>
                 <a href="https://www.yelp.com/biz/ryu-acupuncture-clinic-inc-burbank" target="_blank" class="footer_link-2 footer_icon"></a>
-                <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"></a>
+                <a href="https://www.goodreads.com/user/show/94195634-john-barrett" target="_blank" class="footer_link-2 footer_icon"> </a>
               </li>
             </ul>
           </div>
