--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 07:48:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 09:17:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
         <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
       </video>
       <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic, Inc</h1>
-      <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a journey...&quot;</h2>
+      <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
       <a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
     </div>
   </div>
@@ -43,7 +43,7 @@
   </div>
   <div id="About" class="about_section">
     <div class="main_container">
-      <h2 class="section_h2">About</h2>
+      <h2 class="section_h2">About Us</h2>
       <div class="_4_block_row">
         <div class="_4_block"><img src="images/experienced_acupuncturists.png" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a7c7d54a-eaff-e079-4052-3746870b5e85" alt="" class="eastern_medicine_icons">
           <h4 class="icon_h3">Over 20+ Years Experience</h4>
@@ -183,7 +183,7 @@
   </div>
   <div id="Services" class="services_section">
     <div class="main_container">
-      <h2 class="section_h2">Services</h2>
+      <h2 class="section_h2">Our Services</h2>
       <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
       <div class="cards_grid">
         <div id="w-node-bb3cbd291ef5-bfb09bd8" class="card_block">
@@ -227,7 +227,7 @@
   </div>
   <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section">
     <div class="horizontal_wrapper">
-      <h1 class="section_h2">Testimonials</h1>
+      <h1 class="section_h2">Our Testimonials</h1>
       <div class="horizontal_scroll_content">
         <div class="testimonial_card_1">
           <p class="testimonial_para"><em class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</em></p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
