--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 07:48:05 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 09:17:03 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -41,6 +41,13 @@
         <a data-filter=".yelp" href="#" class="filter-button ryu_testimonial_button w-button"><strong>YELP</strong></a>
         <a data-filter=".google" href="#" class="filter-button ryu_testimonial_button w-button"><strong>GOOGLE</strong></a>
         <a data-filter=".facebook" href="#" class="filter-button ryu_testimonial_button w-button"><strong>FACEBOOK</strong></a>
+      </div>
+      <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
+        <p class="testimonial_para">&quot;Dr.Ryu is such a woonderful acupuncturist! He listens to your pain and treats you with care!<br><br>I really liked that they made sure I fill out the patient info form, and asked questions related to COVID. The facility had lots of sanitary equipments and I felt safe, since I&#x27;ve been very cautious with the virus. When I first made an appointment, I spoke with Jennifer and she was so helpful and answered all my questions at length.<br><br>My neck was tense from sitting on the desk for so long from work and my elbow nerve was bothering me when I leaned on my desk. Dr.Ryu asked many questions to understand me better and checked my pulse carelly. Then he put the needles on my hand and explained to me how certain needles are connected in my body part.<br><br>It&#x27;s been a week and now my elbow is feeling so much better and I definitely feel less tense on my left shoulder!<br><br>If you&#x27;re scared of needles just like me, Ryu Acupuncturist will change your perception about needles! I&#x27;ve gone to many acupuncturists and some of them put the needle in a wrong place and makes it hurt and uncomfortable even after the treatment. Dr.Ryu&#x27;s treatment was so smooth and gentle, and I feel so much better! I found it so hard to find acupuncturists who actually treats patients with care these days, and I&#x27;m so glad I found Dr.Ryu who I can trust.&quot;</p><img src="images/christina_k.jpg" loading="lazy" alt="" class="testimonial_image">
+        <div class="testimonial_author">Christina K.</div>
+        <div class="testimonial_location">Los Angeles, CA</div>
+        <div class="testimonial_date">11/07/2020</div>
+        <div class="testimonial_source">Review from Yelp</div>
       </div>
       <div class="testimonial_block mix yelp _2020"><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star_full">
         <p class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</p><img src="images/default_testimonial.png" loading="lazy" alt="" class="testimonial_image">
