--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 09:17:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 12:03:14 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -287,7 +287,7 @@
       </div>
     </div>
     <div class="horizontal_progress"></div>
-    <a href="services.html" class="ryu_button_testimonial w-button"><strong>SEE ALL</strong></a>
+    <a href="testimonials.html" class="ryu_button_testimonial w-button"><strong>SEE ALL</strong></a>
   </div>
   <div class="testimonials_section_mobile">
     <div class="main_container">
@@ -394,7 +394,7 @@
     </div>
   </div>
   <div class="footer_section">
-    <div class="ends_container">
+    <div class="main_container">
       <div class="_4_block_row">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block"><img src="https://d3e54v103j8qbb.cloudfront.net/plugins/Basic/assets/placeholder.60f9b1840c.svg" loading="lazy" alt="" class="image-2">
           <p class="disclaimer_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
@@ -403,9 +403,7 @@
           <h3 class="footer_h3">Navigation</h3>
           <div class="w-layout-grid footer_grid_2_block">
             <ul role="list" class="w-list-unstyled">
-              <li class="footer_link">
-                <a href="team.html" class="link_white">About</a>
-              </li>
+              <li class="footer_link">Team</li>
               <li class="footer_link">
                 <a href="services.html" class="link_white">Services</a>
               </li>
@@ -427,7 +425,7 @@
                 <a href="privacy.html" class="link_white">Privacy Policy</a>
               </li>
               <li class="footer_link">
-                <a href="#" class="link_white">Site Map</a>
+                <a href="site-map.html" class="link_white">Site Map</a>
               </li>
             </ul>
           </div>
