--- a/site-map.html
+++ b/site-map.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Wed Nov 11 2020 12:03:14 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
+<html data-wf-page="5fabd152b2c7616de336da47" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
-  <title>Contact</title>
-  <meta content="Contact" property="og:title">
-  <meta content="Contact" property="twitter:title">
+  <title>Site Map</title>
+  <meta content="Site Map" property="og:title">
+  <meta content="Site Map" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/components.css" rel="stylesheet" type="text/css">
@@ -24,36 +24,15 @@
         <a href="services.html" class="nav_link w-nav-link">Services</a>
         <a href="conditions-treated.html" class="nav_link w-nav-link">Conditions Treated</a>
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
-        <a href="contact.html" aria-current="page" class="nav_link w-nav-link w--current">Contact</a>
+        <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
       <div class="w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
   </div>
-  <div class="contact_page_section">
-    <div class="main_container">
-      <h1 class="section_h1">Contact Us</h1>
-      <p class="solo_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-      <div class="_2_block_row">
-        <div class="_2_block margin_right">
-          <div data-widget-latlng="34.1523293,-118.3410588" data-widget-tooltip="Ryu Acupuncture Clinic, Inc" data-w-id="6df80a4d-3aac-723a-9665-be140689882a" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="w-widget w-widget-map"></div>
-        </div>
-        <div class="_2_block margin_left">
-          <div class="form-block w-form">
-            <form id="email-form" name="email-form" data-name="Email Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
-              <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
-            </form>
-            <div class="w-form-done">
-              <div>Thank you! Your submission has been received!</div>
-            </div>
-            <div class="w-form-fail">
-              <div>Oops! Something went wrong while submitting the form.</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  <div class="site_map_section">
+    <div class="main_container"></div>
   </div>
   <div class="footer_section">
     <div class="main_container">
@@ -76,7 +55,7 @@
                 <a href="testimonials.html" class="link_white">Testimonials</a>
               </li>
               <li class="footer_link">
-                <a href="contact.html" aria-current="page" class="link_white w--current">Contact</a>
+                <a href="contact.html" class="link_white">Contact</a>
               </li>
             </ul>
             <ul role="list" class="w-list-unstyled">
@@ -87,7 +66,7 @@
                 <a href="privacy.html" class="link_white">Privacy Policy</a>
               </li>
               <li class="footer_link">
-                <a href="site-map.html" class="link_white">Site Map</a>
+                <a href="site-map.html" aria-current="page" class="link_white w--current">Site Map</a>
               </li>
             </ul>
           </div>
