--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 13 2021 06:19:22 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 14 2021 06:26:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -191,34 +191,34 @@
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291ef5-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/needles_close_up.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291ef7" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/needles_close_up-p-500.jpeg 500w, images/needles_close_up.jpg 588w" alt="" class="cards_img"></div>
           <h3 class="card_h3">Acupuncture</h3>
-          <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p class="cards_para">Acupuncture is the insertion of very thin needles through your skin at specific points of the body. A staple of traditional Chinese medicine, acupuncture is most commonly used to treat pain and stress.</p>
         </div>
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f03-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/chinese_herbs.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291f05" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/chinese_herbs-p-500.jpeg 500w, images/chinese_herbs-p-1080.jpeg 1080w, images/chinese_herbs.jpg 1430w" alt="" class="cards_img"></div>
           <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f06-bfb09bd8" class="card_h3">Traditional Chinese Herbs</h3>
-          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f08-bfb09bd8" class="cards_para">Chinese herbal medicine uses herbs to improve overall health, while combatting a wide-variety of conditions and ailments. This approach helps to balance the body by treating patient patterns.</p>
         </div>
         <div id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291efc-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/cupping.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="970e7283-14f5-9a72-d95a-bb3cbd291efe" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/cupping-p-500.jpeg 500w, images/cupping-p-800.jpeg 800w, images/cupping.jpg 900w" alt="" class="cards_img"></div>
           <h3 id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291eff-bfb09bd8" class="card_h3">Cupping</h3>
-          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p id="w-node-_970e7283-14f5-9a72-d95a-bb3cbd291f01-bfb09bd8" class="cards_para">Cupping is a form of alternative therapy originating in China. It involves placing cups on the skin to from suction that may help facilitate healing with the increased blood flow to the area of treatment.</p>
         </div>
       </div>
       <div class="cards_grid">
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f0e-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/auriculotherapy.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f10" alt="" class="cards_img"></div>
           <h3 class="card_h3">Auriculotherapy</h3>
-          <p class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p class="cards_para">Ear acupuncture, or auriculotherapy, is a form of medicine based on the notion that the ear is a micro system that reflects the body. The auricle, or outer portion of the ear, is where treatment is performed.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8" class="card_block">
           <div class="crads_img_mask"><img src="images/moxibustion.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f17" alt="" class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
-          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">A traditional Chinese medicine, Moxibustion is a therapy that consists of burning dried mugwort on particular points of the body. This is often used as a treatment for a wide-range variety of conditions.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1c-bfb09bd8" class="card">
           <div class="crads_img_mask"><img src="images/infrared_light_treatment.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f1e" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1279px) 31vw, 373.328125px" srcset="images/infrared_light_treatment-p-500.jpeg 500w, images/infrared_light_treatment.jpg 679w" alt="" class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1f-bfb09bd8" class="card_h3">Heat Therapy</h3>
-          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f21-bfb09bd8" class="cards_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. </p>
+          <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f21-bfb09bd8" class="cards_para">Also called thermotherapy, heat therapy is the use of heat to treat pain and improve overall health. This is often beneficial to patients with ailments such as arthritis, stiff muscles or deep tissue injuries.</p>
         </div>
       </div>
       <a href="services.html" class="ryu_button w-button"><strong>LEARN MORE</strong></a>
@@ -230,7 +230,7 @@
   <div data-w-id="2100a1f4-dc7b-4b45-6d52-944c265363bb" class="testimonials_section">
     <div class="horizontal_wrapper">
       <div class="block_text_pre_h2">OUR TESTIMONIALS</div>
-      <h1 class="section_h2">See what our patients are saying.</h1>
+      <h1 class="section_h2">See what our patients are saying</h1>
       <div class="horizontal_scroll_content">
         <div class="testimonial_card_1">
           <p class="testimonial_para"><em class="testimonial_para">&quot;This is my second review because we were successful to have another child after receiving acupuncture and herbal treatment from Dr. Ryu! We had our first child in 2016 after getting both acpuncture and herbal treatment for 18 months. Our first IVF was successful. For our second child, I had treaent for about 4 months with Dr Ryu and had a cold transfer. Now our daughter is 3 yo and our son is 3 mons old. They&#x27;re both healthy as they can be and so am I. This is all thanks to Dr. Ryu. Not only I was able to get pregnant twice, my over all health was improved--mostly chronic back pain and severe allergy. Without his treatment, it would be very difficult to get pregnant in such a short period of time.&quot;</em></p><img src="images/yelp_5_star.PNG" loading="lazy" alt="" class="_5_star">
